[package]
name = "scavenger"
version = "0.1.0"
edition = "2021"

# Jito Searcher Client (如果使用)
# jito-searcher-client = { git = "https://github.com/jito-foundation/jito-solana.git", package = "jito-searcher-client", version = "0.1.0" }
# jito-protos = { git = "https://github.com/jito-foundation/jito-solana.git", package = "jito-protos", version = "0.1.0" }
# 由于 Jito SDK 版本问题，暂时使用本地 Mock 或注释掉，先完成 Raydium AMM 的实现
# 真实生产中应使用固定 tag 版本

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.9"

# Token 解析与 Swap 构建
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
borsh = "0.10"
borsh-derive = "0.10"
bs58 = "0.4"
bytemuck = "1.13" 
uint = "0.9" 
tonic = "0.9" # 保留 Tonic 以防万一
prost = "0.11"
futures = "0.3"
dashmap = "5.5"
reqwest = { version = "0.11", features = ["json", "blocking"] } # Use 0.11 to be safe, or 0.12 with default-tls
bincode = "1.3"
clap = { version = "4.5.53", features = ["derive"] }

# 临时移除 jito 依赖以修复编译，专注于 AMM 实现
# [dependencies.jito-searcher-client]
# git = "https://github.com/jito-foundation/jito-solana.git"
# package = "jito-searcher-client"

# [dependencies.jito-protos]
# git = "https://github.com/jito-foundation/jito-solana.git"
# package = "jito-protos"

[lib]
name = "scavenger_lib"
path = "src/lib.rs"

[[bin]]
name = "scavenger"
path = "src/main.rs"


